--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,172 @@
+[window]
+blur = false
+decorations = "None"
+decorations_theme_variant = "None"
+dynamic_padding = false
+dynamic_title = true
+opacity = 1.0
+position = "None"
+resize_increments = false
+startup_mode = "Windowed"
+title = "Alacritty"
+
+[window.class]
+instance = "Alacritty"
+general = "Alacritty"
+
+[window.dimensions]
+columns = 0
+lines = 0
+
+[window.padding]
+x = 4
+y = 4
+
+
+[scrolling]
+history = 10000
+multiplier = 3
+
+
 [font]
+builtin_box_drawing = true
 size = 9.0
 
 [font.normal]
 family = "monospace"
 style = "Regular"
+
+[font.bold]
+family = "monospace"
+#style = "Bold"
+
+[font.italic]
+family = "monospace"
+#style = "Italic"
+
+[font.bold_italic]
+family = "monospace"
+#style = "Bold Italic"
+
+[font.offset]
+x = 0
+y = 0
+
+[font.glyph_offset]
+# x =
+# y =
+
+
+[colors]
+transparent_background_colors = false
+draw_bold_text_with_bright_colors = false
+
+[colors.primary]
+foreground = "#d8d8d8"
+background = "#181818"
+dim_foreground = "#828482"
+bright_foreground = "None"
+
+[colors.cursor]
+text = "CellBackground"
+cursor = "CellForeground"
+
+[colors.vi_mode_cursor]
+text = "CellBackground"
+cursor = "CellForeground"
+
+[colors.search]
+matches = { foreground = "#181818", background = "#ac4242" }
+focused_match = { foreground = "#181818", background = "#f4bf75" }
+
+[colors.hints]
+start = { foreground = "#181818", background = "#f4bf75" }
+end = { foreground = "#181818", background = "#ac4242" }
+
+[colors.line_indicator]
+foreground = "None"
+background = "None"
+
+[colors.footer_bar]
+foreground = "#181818"
+background = "#d8d8d8"
+
+[colors.selection]
+text = "CellBackground"
+background = "CellForeground"
+
+[colors.normal]
+black = "#181818"
+red = "#ac4242"
+green = "#90a959"
+yellow = "#f4bf75"
+blue = "#6a9fb5"
+magenta = "#aa759f"
+cyan = "#75b5aa"
+white = "#d8d8d8"
+
+[colors.bright]
+black = "#6b6b6b"
+red = "#c55555"
+green = "#aac474"
+yellow = "#feca88"
+blue = "#82b8c8"
+magenta = "#c28cb8"
+cyan = "#93d3c3"
+white = "#f8f8f8"
+
+[colors.dim]
+black = "#0f0f0f"
+red = "#712b2b"
+green = "#5f6f3a"
+yellow = "#a17e4d"
+blue = "#456877"
+magenta = "#704d68"
+cyan = "#4d7770"
+white = "#8e8e8e"
+
+#[[colors.indexed_colors]]
+#index = 16
+#color = "#123456"
+
+
+[bell]
+animation = "Linear"
+duration = 0
+color = "#ffffff"
+command = "None"
+
+
+[selection]
+#semantic_escape_chars = ",│‘|:"' ()[]{}<>t"
+save_to_clipboard = false
+
+
+[cursor]
+vi_mode_style = "None"
+blink_interval = 750
+blink_timeout = 5
+unfocused_hollow = true
+thickness = 0.15
+
+[cursor.style]
+shape = "Block"
+blinking = "Off"
+
+
+[terminal]
+osc52 = "OnlyCopy"
+
+
+[mouse]
+hide_when_typing = false
+#bindings = [{ <mouse>, <mods> , <mode>, <action> | <chars> },]
+
+
+[hints]
+alphabet = "jfkdls;ahgurieowpq"
+#enabled = [{ <regex>, <hyperlinks>, <post_processing>, <persist>, <action>, <command> <binding>, <mouse> },]
+
+
+[keyboard]
+#bindings = [{ <key>, <mods>, <mode>, <action> | <chars> },]
