--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -85,7 +85,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 7
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -135,8 +135,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-    "90:class_g = 'URxvt' && focused",
-    "60:class_g = 'URxvt' && !focused"
+    "90:class_g = 'Alacritty' && focused",
+    "85:class_g = 'Alacritty' && !focused"
 ];
 
 
@@ -162,18 +162,18 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+blur-method = "dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
 #
-# blur-strength = 5
+blur-strength = 6
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -216,8 +216,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+# backend = "xrender"
+backend = "glx"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
@@ -427,8 +427,9 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  dock = { shadow = false; clip-shadow-above = true; };
+  dnd = { shadow = false; };
+  popup_menu = { shadow = false; opacity = 0.8; };
+  dropdown_menu = { shadow = false; opacity = 0.8; };
+  utility = { shadow = false; };
 };
