--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -50,6 +50,9 @@ shadow-exclude = [
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
   "class_g = 'Firefox' && argb",
+  "name = 'cpt_frame_xcb_window'",
+  "class_g ?= 'zoom'",
+  "name = 'rect-overlay'",
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -148,7 +151,7 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+corner-radius = 20
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -201,7 +204,9 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g ?= 'zoom'",
+  "name = 'rect-overlay'",
 ];
 
 #################################
@@ -262,6 +267,7 @@ detect-client-opacity = true;
 # when redirecting/unredirecting windows.
 #
 # unredir-if-possible = false
+unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
