--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -3,11 +3,11 @@ color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=true
 icon_theme=breeze-dark
 standard_dialogs=default
-style=Fusion
+style=Breeze
 
 [Fonts]
-fixed="DejaVu Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Book"
-general="DejaVu Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Book"
+fixed="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
+general="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
 
 [Interface]
 activate_item_on_single_click=1
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x2\0\0\0\x1a\0\0\x3\xbe\0\0\x4\x35\0\0\0\x4\0\0\0\x34\0\0\x3\xbc\0\0\x4\x33\0\0\0\0\0\0\0\0\a\x80\0\0\0\x4\0\0\0\x34\0\0\x3\xbc\0\0\x4\x33)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/\0\0\0\0\0\0\0\0\a\x80\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/)
 
 [Troubleshooting]
 force_raster_widgets=1
