--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=Breeze
 
 [Fonts]
-fixed=@Variant(\0\0\0@\0\0\0\x16\0\x44\0\x65\0j\0\x61\0V\0u\0 \0S\0\x61\0n\0s@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\x16\0\x44\0\x65\0j\0\x61\0V\0u\0 \0S\0\x61\0n\0s@&\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+fixed="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
+general="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
 
 [Interface]
 activate_item_on_single_click=1
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2}\0\0\x1!\0\0\x4\xff\0\0\x3\x13\0\0\x2}\0\0\x1!\0\0\x4\xff\0\0\x3\x13\0\0\0\0\0\0\0\0\a\x80\0\0\x2}\0\0\x1!\0\0\x4\xff\0\0\x3\x13)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x4\0\0\0\x1c\0\0\x3\xbd\0\0\x4\x33\0\0\0\x6\0\0\0\x1e\0\0\x3\xbb\0\0\x4\x31\0\0\0\0\0\0\0\0\a\x80\0\0\0\x6\0\0\0\x1e\0\0\x3\xbb\0\0\x4\x31)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/\0\0\0\0\0\0\0\0\a\x80\0\0\0\b\0\0\0\"\0\0\x3\xbb\0\0\x4/)
 
 [Troubleshooting]
 force_raster_widgets=1
