--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -6,8 +6,8 @@ standard_dialogs=default
 style=Breeze
 
 [Fonts]
-fixed="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
-general="Noto Sans,12,-1,5,57,0,0,0,0,0,Medium"
+fixed="NotoSansM Nerd Font Mono SemiCondensed SemiBold,12,-1,5,63,0,0,0,0,0,Regular"
+general="NotoSansM Nerd Font Mono SemiCondensed SemiBold,12,-1,5,63,0,0,0,0,0,Regular"
 
 [Interface]
 activate_item_on_single_click=1
