--- a/.config/gtk-2.0/settings.ini
+++ b/.config/gtk-2.0/settings.ini
@@ -1,18 +1,15 @@
-# DO NOT EDIT! This file will be overwritten by LXAppearance.
-# Any customization should be done in ~/.gtkrc-2.0.mine instead.
-
-include "/home/josu/.gtkrc-2.0.mine"
-gtk-theme-name="Breeze-Dark"
-gtk-icon-theme-name="breeze-dark"
-gtk-font-name="DejaVu Sans 11"
+[Settings]
+gtk-button-images=0
 gtk-cursor-theme-name="Bibata-Modern-Purple"
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
-gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
-gtk-button-images=0
-gtk-menu-images=0
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
+gtk-font-name="NotoSans NFP SemCond SemiBold 12"
+gtk-icon-theme-name="breeze-dark"
+gtk-menu-images=0
+gtk-theme-name="Breeze-Dark"
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle="hintmedium"
