--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,18 +1,18 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-button-images=0
-gtk-cursor-theme-name="Bibata-Modern-Purple"
+gtk-cursor-theme-name=Bibata-Modern-Purple
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
-gtk-font-name="NotoSans NFP SemCond SemiBold 12"
-gtk-icon-theme-name="breeze-dark"
+gtk-font-name=NotoSans NFP SemCond SemiBold 12
+gtk-icon-theme-name=breeze-dark
 gtk-menu-images=0
-gtk-theme-name="Breeze-Dark"
-gtk-toolbar-style="GTK_TOOLBAR_BOTH_HORIZ"
-gtk-toolbar-icon-size="GTK_ICON_SIZE_SMALL_TOOLBAR"
+gtk-theme-name=Breeze-Dark
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle="hintmedium"
-gtk-xft-rgba="rgb"
+gtk-xft-hintstyle=hintmedium
+gtk-xft-rgba=rgb
 # gtk-decoration-layout=menu:close
