--- a/.config/gtk-2.0/settings.ini
+++ b/.config/gtk-2.0/settings.ini
@@ -1,5 +1,5 @@
 gtk-button-images=0
-gtk-cursor-theme-name="Bibata-Modern-Purple"
+gtk-cursor-theme-name="Bibata-Modern-Ice"
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
