--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,24 +3,24 @@
 <fontconfig>
     <!--Global settings-->
     <match target="font">
-        <edit name="antialias" mode="assign">
+        <edit mode="assign" name="antialias" >
             <bool>true</bool>
         </edit>
-        <edit name="autohint" mode="assign">
+        <edit mode="assign" name="autohint">
             <bool>true</bool>
         </edit>
-        <edit name="hinting" mode="assign">
+        <edit mode="assign" name="hinting">
             <bool>true</bool>
         </edit>
-        <edit name="hintstyle" mode="assign">
+        <edit mode="assign" name="hintstyle">
             <!--hintnone, hintslight, hintmedium, hintfull-->
             <const>hintfull</const>
         </edit>
-        <edit name="lcdfilter" mode="assign">
+        <edit mode="assign" name="lcdfilter">
             <!--lcddefault, lcdlight, lcdlegacy, lcdnone-->
             <const>lcddefault</const>
         </edit>
-        <edit name="rgba" mode="assign">
+        <edit mode="assign" name="rgba">
             <!--rgb,bgr,v-rgb,v-bgr-->
             <const>rgb</const>
         </edit>
