--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,5 +1,5 @@
 [General]
 contrastOpacity=191
-drawColor=#f2031c
+drawColor=#ffff00
 drawThickness=50
-savePath=/home/josu/Desktop
+savePath=/home/josu/Pictures
