--- a/.ssh/config
+++ b/.ssh/config
@@ -1,1 +1,6 @@
 AddKeysToAgent yes
+
+Host OracleCloud
+  HostName mc.aguijos.eus
+  IdentityFile ~/.ssh/oracle_cloud_aginagajosu.pem
+  User ubuntu
